[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "klonetai"
version = "1.0.0"
authors = [
  { name="Zonghang Li", email="lizhuestc@gmail.com" },
]
description = "This package provides an AI agent for intelligent interaction with the Klonet platform."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Lizonghang/KlonetAI"
"Bug Tracker" = "https://github.com/Lizonghang/KlonetAI/issues"
